# Weft

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  PLUGIN_DEVELOPMENT.md  README.md
.github/workflows/: ci.yml
assets/images/: README.md  ai-suggestions.txt  collaboration.txt  debugging.txt  main-interface.txt  plugins.txt  themes.txt
src/: ai.rs  collaboration.rs  config.rs  config_new.rs  config_simple.rs  debugging.rs  doctor.rs  lib.rs  main.rs  performance.rs  plugin_store.rs  plugins.rs  pty.rs  rendering.rs  suggest.rs  terminal.rs
