[package]
name = "weft-terminal"
version = "0.1.0"
edition = "2021"
description = "Next-generation AI-powered terminal development environment"
authors = ["Gaurav Sisodia"]
license = "All Rights Reserved"
repository = "https://github.com/sisodiabhumca/Weft"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
dirs = "5.0.1"

# Logging and debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.1"

[[bin]]
name = "weft"
path = "src/main.rs"

[lib]
name = "weft_terminal"
path = "src/lib.rs"

[features]
default = ["gpu-acceleration"]
gpu-acceleration = []
ai-features = []
collaboration = []
plugins = []
