[package]
name = "weft-terminal"
version = "0.2.0"
edition = "2021"
description = "Next-generation AI-powered terminal development environment"
authors = ["Gaurav Sisodia"]
license = "All Rights Reserved"
repository = "https://github.com/sisodiabhumca/Weft"

[dependencies]
tokio = { version = "1.35", features = ["full", "process", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
dirs = "5.0.1"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.1"

[[bin]]
name = "weft"
path = "src/main.rs"

[lib]
name = "weft_terminal"
path = "src/lib.rs"

[features]
default = []
gpu-acceleration = []
ai-features = []
collaboration = []
plugins = []
